--- a/index.html
+++ b/index.html
@@ -919,24 +919,24 @@
 							<div class="row">
 								<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 									<div class="single-input">
-										<input type="text" placeholder="First Name*" name="Fname">
+										<input type="text" placeholder="Nombre(s)*" name="Fname">
 									</div> <!-- /.single-input -->
 								</div>
 								<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 									<div class="single-input">
-										<input type="text" placeholder="Last Name*" name="Lname">
+										<input type="text" placeholder="Apellidos*" name="Lname">
 									</div> <!-- /.single-input -->
 								</div>
 								<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 									<div class="single-input">
-										<input type="email" placeholder="Your Email*" name="email">
+										<input type="email" placeholder="Email*" name="email">
 									</div> <!-- /.single-input -->
 								</div>
 							</div> <!-- /.row -->
 							<div class="single-input">
-								<input type="text" placeholder="Subject" name="sub">
+								<input type="text" placeholder="Asunto" name="sub">
 							</div> <!-- /.single-input -->
-							<textarea placeholder="Write Message" name="message"></textarea>
+							<textarea placeholder="¿Como podemos ayudarte?" name="message"></textarea>
 
 
 							<button class="tran3s p-color-bg">Send Message</button>
