--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
 							<div class="single-input">
 								<input type="text" placeholder="Asunto" name="sub">
 							</div> <!-- /.single-input -->
-							<textarea placeholder="¿Como podemos ayudarte?" name="message"></textarea>
+							<textarea placeholder="¿Cómo podemos ayudarte?" name="message"></textarea>
 
 
 							<button class="tran3s p-color-bg">Send Message</button>
