--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 					<div id="our-client">
 						<div class="container">
 							<div class="theme-title">
-								<h2>Prado & Cantú Consultoría Legal & Compliance, S.C.</h2>
+								<h2>Prado & Cantú Consultoría Legal & Compliance S.C.</h2>
 								<br>
 								<br>
 								<h3>Cuenta con un equipo de abogados expertos en las materias de:</h3>
@@ -558,7 +558,7 @@
 								<div class="opacity">
 									<div class="border-shape"><div><div>
 										<ul>
-											<li>Prado & Cantú Consultoría Legal & Compliance, S.C. ofrece a las empresas la oportunidad de tener un liderazgo en la construcción de un sociedad más íntegra y libre de corrupción. </li>
+											<li>Prado & Cantú Consultoría Legal & Compliance S.C. ofrece a las empresas la oportunidad de tener un liderazgo en la construcción de un sociedad más íntegra y libre de corrupción. </li>
 
 										</ul></div></div>
 									</div> <!-- /.border-shape -->
@@ -587,7 +587,7 @@
 								<div class="opacity">
 									<div class="border-shape"><div><div>
 										<ul>
-											<li>Trasportar una empresa al futuro mediante un sistema y bases éticas que permitan el correcto funcionamiento de las mismas, llegando mas allá del entendimiento y misión inicial de la empresa. </li>
+											<li>Trasportar una empresa al futuro mediante un sistema y bases éticas que permitan el correcto funcionamiento de las mismas, llegando más allá del entendimiento y misión inicial de la empresa. </li>
 
 
 										</ul></div></div>
@@ -616,7 +616,7 @@
 								<div class="opacity">
 									<div class="border-shape"><div><div>
 										<ul>
-											<li>Prado & Cantú Consultoría Legal & Compliance, S.C. prepara a una empresa para la visión que tendrán de ella las nuevas generaciones. </li>
+											<li>Prado & Cantú Consultoría Legal & Compliance S.C. prepara a una empresa para la visión que tendrán de ella las nuevas generaciones. </li>
 										</ul></div></div>
 									</div> <!-- /.border-shape -->
 								</div> <!-- /.opacity -->
@@ -785,8 +785,8 @@
 											<br>
 
 
-										El buen cumplimiento de las normas no puede darse por sentado dentro de la compañía, ya que es de gran importancia para el desarrollo y crecimiento de la empresa  se debe poner suma atención porque esté sea llevado a cabo.</ul>
-										<br><ul>El concepto de criminal compliance ha tenido un mayor uso y crecimiento E.U.A y Europa, en Prado & Cantú Consultoría Legal & Compliance, S.C. asesoramos a los clientes para la presentación de un programa de cumplimiento y procedimiento empresarial de conformidad con las exigencias legales.</ul>
+										El buen cumplimiento de las normas no puede darse por sentado dentro de la compañía, ya que es de gran importancia para el desarrollo y crecimiento de la empresa  se debe poner suma atención porque éste sea llevado a cabo.</ul>
+										<br><ul>El concepto de <i>Criminal Compliance</i> ha tenido un mayor uso y crecimiento E.U.A y Europa, en Prado & Cantú Consultoría Legal & Compliance S.C. asesoramos a los clientes para la presentación de un programa de cumplimiento y procedimiento empresarial de conformidad con las exigencias legales.</ul>
 										<br>
 
 											<li>El marco organizacional de la empresa.</li>
@@ -877,15 +877,16 @@
 						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 							<div class="left-side">
 								<h2>CONTACTANOS</h2>
-								<p>There are many variations of passages of Lorem Ipsum available, but the majori have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a pas of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. <br><br>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore et dolore magna aliqua.</p>
+							
 
 								<ul>
+									<!--
 									<li>
 										<div class="icon tran3s round-border p-color-bg"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
 										<h6>Dirección</h6>
 										<p>Freedom Way, Jersey City, NJ 07305, USA</p>
 									</li>
+								-->
 									<li>
 										<div class="icon tran3s round-border p-color-bg"><i class="fa fa-phone" aria-hidden="true"></i></div>
 										<h6>Telefono</h6>
@@ -894,7 +895,7 @@
 									<li>
 										<div class="icon tran3s round-border p-color-bg"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
 										<h6>Email</h6>
-										<p>backpiper.com@gmail.com</p>
+										<p>consultoriapradocantu@gmail.com</p>
 									</li>
 								</ul>
 							</div> <!-- /.left-side -->
@@ -939,7 +940,7 @@
 							<textarea placeholder="¿Cómo podemos ayudarte?" name="message"></textarea>
 
 
-							<button class="tran3s p-color-bg">Send Message</button>
+							<button class="tran3s p-color-bg">Enviar</button>
 						</form>
 
 
