--- a/index.html
+++ b/index.html
@@ -419,11 +419,11 @@
 								<h2>Prado & Cantú Consultoría Legal & Compliance, S.C.</h2>
 								<br>
 								<br>
-								<h3>Cuenta con un equipo de abogados expertos en las materias de:</h3>
+								<h3>Áreas de práctica:</h3>
 
 								<br>
 								<div class=" theme-title">
-								<h4>Contratos Mercantiles y civiles <br><br> Gobierno Corporativo <br><br> Créditos y Garantías <br><br>Ley FINTECH <br><br>Inmobiliario <br><br> Societario <br><br> Fiduciario <br><br> Notarial</h4>
+								<h4>Asesoría en trámites notariales <br><br> Contratos Civiles y Mercantiles <br><br> Derecho Bancario y Financiero <br><br>Derecho Societario <br><br>Compliance <br><br> Inmobiliario</h4>
 
 								<br><br>
 							</div>
