--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
 			=====================================================
 				Partner Section
 			=====================================================
-			-->
+			
 			<div id="partner-section">
 				<div class="container">
 					<div id="partner_logo" class="owl-carousel owl-theme">
@@ -860,8 +860,8 @@
 						<div class="item"><img src="images/logo/p4.png" alt="logo"></div>
 						<div class="item"><img src="images/logo/p5.png" alt="logo"></div>
 						<div class="item"><img src="images/logo/p2.png" alt="logo"></div>
-					</div> <!-- End .partner_logo -->
-				</div> <!-- /.container -->
+					</div> 
+				</div> <!-- /.container 
 			</div> <!-- /#partner-section -->
 
 
@@ -892,21 +892,17 @@
 										<h6>Telefono</h6>
 										<p>+88 01911854378</p>
 									</li>
-									<li>
-										<div class="icon tran3s round-border p-color-bg"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
-										<h6>Email</h6>
-										<p>consultoriapradocantu@gmail.com</p>
-									</li>
+									
 								</ul>
 							</div> <!-- /.left-side -->
-						</div> <!-- /.col- -->
+						</div> <!-- /.col- 
 
 
 						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 							<div class="map-area">
 								<h2>Nuestra ubicación</h2>
 								<div id="map"></div>
-							</div> <!-- /.map-area -->
+							</div> <!-- /.map-area 
 						</div> <!-- /.col- -->
 					</div> <!-- /.contact-address-content -->
 
@@ -934,7 +930,10 @@
 									</div> <!-- /.single-input -->
 								</div>
 							</div> <!-- /.row -->
-							<div class="single-input">
+							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+								<input type="text" placeholder="Teléfono" name="tel">
+							</div> <!-- /.single-input -->
+							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 								<input type="text" placeholder="Asunto" name="sub">
 							</div> <!-- /.single-input -->
 							<textarea placeholder="¿Cómo podemos ayudarte?" name="message"></textarea>
