--- a/index.html
+++ b/index.html
@@ -932,12 +932,12 @@
 							</div> <!-- /.row -->
 							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 								<div class="single-input">
-								<input type="text" placeholder="Teléfono" name="tel">
+								<input type="text" placeholder="Teléfono*" name="tel">
 							</div> <!-- /.single-input -->
 							</div>
 							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 								<div class="single-input">
-								<input type="text" placeholder="Asunto" name="sub">
+								<input type="text" placeholder="Asunto*" name="sub">
 							</div> <!-- /.single-input -->
 							</div>
 							<textarea placeholder="¿Cómo podemos ayudarte?" name="message"></textarea>
