--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
 								<br>
 								<div class=" theme-title">
-								<h4>Asesoría en trámites notariales <br><br> Contratos Civiles y Mercantiles <br><br> Derecho Bancario y Financiero <br><br>Derecho Societario <br><br>Compliance <br><br> Inmobiliario</h4>
+								<h4>Inmobiliario <br><br>Compliance <br><br> Contratos Civiles y Mercantiles <br><br>Derecho Societario <br><br> Derecho Bancario y Financiero <br><br> Asesoría en trámites notariales</h4>
 
 								<br><br>
 							</div>
