--- a/index.html
+++ b/index.html
@@ -430,6 +430,18 @@
 							</div> <!-- /.theme-title -->
 						</div> <!-- /.conatiner -->
 					</div> <!-- /#team-section -->
+			
+			
+			
+			<div id="service-section">
+				<div class="container">
+					<div class="theme-title">
+						<h2>¿QUÉ ES COMPLIANCE?</h2>
+						<p>Compliance es el equilibrio en el que participan todos los sectores que conforman a una empresa y le dan la oportunidad de prevenir posibles omisiones legales que pongan en riesgo la integridad de la empresa o causar incluso el cierre de la misma.</p>
+					</div> <!-- /.theme-title -->
+				</div>
+			</div>
+			
 
 
 
