--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@
 			<div id="service-section">
 				<div class="container">
 					<div class="theme-title">
-						<h2>¿QUÉ ES COMPLIANCE?</h2>
-						<p>Compliance es el equilibrio en el que participan todos los sectores que conforman a una empresa y le dan la oportunidad de prevenir posibles omisiones legales que pongan en riesgo la integridad de la empresa o causar incluso el cierre de la misma.</p>
+						<h2>En Prado & Cantú, Consultoría Legal y Compliance, S.C., estamos comprometidos con ofrecer a nuestros clientes, asesoría transparente proveyendo servicios legales de alta calidad.</h2>
+						<p>Trabajamos con nuestros clientes para la implementación de soluciones que atiendan cada una de sus necesidades, buscando siempre su satisfacción y el logro de sus objetivos.</p>
 					</div> <!-- /.theme-title -->
 				</div>
 			</div>
