--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 				<div class="container">
 					<div class="theme-title">
 						<h2>En Prado & Cantú, Consultoría Legal y Compliance, S.C., estamos comprometidos con ofrecer a nuestros clientes, asesoría transparente proveyendo servicios legales de alta calidad.</h2>
-						<p>Trabajamos con nuestros clientes para la implementación de soluciones que atiendan cada una de sus necesidades, buscando siempre su satisfacción y el logro de sus objetivos.</p>
+						<h3>Trabajamos con nuestros clientes para la implementación de soluciones que atiendan cada una de sus necesidades, buscando siempre su satisfacción y el logro de sus objetivos.</h3>
 					</div> <!-- /.theme-title -->
 				</div>
 			</div>
