--- a/index.html
+++ b/index.html
@@ -436,8 +436,9 @@
 			<div id="service-section">
 				<div class="container">
 					<div class="theme-title">
-						<h2>En Prado & Cantú, Consultoría Legal y Compliance, S.C., estamos comprometidos con ofrecer a nuestros clientes, asesoría transparente proveyendo servicios legales de alta calidad.</h2>
-						<h3>Trabajamos con nuestros clientes para la implementación de soluciones que atiendan cada una de sus necesidades, buscando siempre su satisfacción y el logro de sus objetivos.</h3>
+						<h2>En Prado & Cantú, Consultoría Legal y Compliance, S.C.,</h3> 
+						<p>Estamos comprometidos con ofrecer a nuestros clientes, asesoría transparente proveyendo servicios legales de alta calidad.</p><br>
+						<p>Trabajamos con nuestros clientes para la implementación de soluciones que atiendan cada una de sus necesidades, buscando siempre su satisfacción y el logro de sus objetivos.</p>
 					</div> <!-- /.theme-title -->
 				</div>
 			</div>
