--- a/index.html
+++ b/index.html
@@ -437,11 +437,24 @@
 				<div class="container">
 					<div class="theme-title">
 						<h2>En Prado & Cantú, Consultoría Legal y Compliance, S.C.,</h3> 
-						<p>Estamos comprometidos con ofrecer a nuestros clientes, asesoría transparente proveyendo servicios legales de alta calidad.</p><br>
+						<p>Estamos comprometidos con ofrecer a nuestros clientes, asesoría transparente proveyendo servicios legales de alta calidad.</p>
 						<p>Trabajamos con nuestros clientes para la implementación de soluciones que atiendan cada una de sus necesidades, buscando siempre su satisfacción y el logro de sus objetivos.</p>
 					</div> <!-- /.theme-title -->
 				</div>
 			</div>
+			
+			
+			
+			<div id="our-client">
+						<div class="container">
+							<div class="theme-title">
+								<h2>Prado & Cantú Consultoría Legal & Compliance, S.C.</h2>
+								<p>Somos un equipo de abogados que cuenta con amplia experiencia en las áreas de Inmobiliario, Compliance, Contratos Civiles y Mercantiles, Derecho Societario, Derecho Bancario y Financiero y asesoría en toda clase de trámites notariales.
+								</p>
+								<p>En lo individual, como abogados de empresa, hemos participado en transacciones inmobiliarias en varios Estados de la República Mexicana, por montos de hasta US$300 millones de dólares, así como participado en operaciones relacionadas con fideicomisos y re-estructuras por cientos de millones de pesos de algunas de las inmobiliarias más representativas de México.</p>
+							</div> <!-- /.theme-title -->
+						</div> <!-- /.conatiner -->
+					</div> <!-- /#team-section -->
 			
 
 
