--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 								<h2>Prado & Cantú Consultoría Legal & Compliance, S.C.</h2>
 								<p>Somos un equipo de abogados que cuenta con amplia experiencia en las áreas de Inmobiliario, Compliance, Contratos Civiles y Mercantiles, Derecho Societario, Derecho Bancario y Financiero y asesoría en toda clase de trámites notariales.
 								</p>
-								<p>En lo individual, como abogados de empresa, hemos participado en transacciones inmobiliarias en varios Estados de la República Mexicana, por montos de hasta US$300 millones de dólares, así como participado en operaciones relacionadas con fideicomisos y re-estructuras por cientos de millones de pesos de algunas de las inmobiliarias más representativas de México.</p>
+								<p>En lo individual, como abogados de empresa, hemos participado en transacciones inmobiliarias en varios Estados de la República Mexicana, por montos de hasta US$300 millones de dólares, así como participado en operaciones relacionadas con fideicomisos y re-estructuras por cientos de millones de pesos de algunas de las inmobiliarias más representativas de México.</p><br>
 							</div> <!-- /.theme-title -->
 						</div> <!-- /.conatiner -->
 					</div> <!-- /#team-section -->
