--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
 									<li>
 										<div class="icon tran3s round-border p-color-bg"><i class="fa fa-phone" aria-hidden="true"></i></div>
 										<h6>Telefono</h6>
-										<p>+88 01911854378</p>
+										<p class"text-black">+88 01911854378</p>
 									</li>
 									
 								</ul>
