--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
 									</li>
 								-->
 									<li>
-										<div class="icon tran3s round-border "><i class="fa fa-phone" aria-hidden="true"></i></div>
+										<div class="icon tran3s round-border p-color-bg"><i class="fa fa-phone" aria-hidden="true"></i></div>
 										<h6>Telefono</h6>
 										<p class"negritas">+88 01911854378</p>
 									</li>
