--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
 							<div class=skill-section>
 								<div class="habilidades_contenedor">
 							        <div class=" ">
-												<h3>Compliance Penal<h3/>
+												<p>Compliance Penal<p/>
 
 								        </div>
 												<br>
